references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ViewRendering_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:4ad2b853cd915ceb8612445e3e1b34b4e0c3ca96db8dce8425cd8cdcd33dbdbb
size 1955
